--- a/development/sass/_layout.scss
+++ b/development/sass/_layout.scss
@@ -132,16 +132,22 @@ nav {
 
 	@include media(small) {
 		width: 25%;
-		//max-width: 80px;
 		height: 80px;
 		padding-top: 20px;
 
-		cursor: pointer;
+		cursor: pointer; 
 
 
 		margin: 0 auto;
 	}
-
+	
+	.clickable-area {
+		position: absolute;
+		display: block;
+		width: 100%;
+		height: 80px;
+		bottom: 0;
+	}
 
 
 	svg g {
@@ -177,6 +183,8 @@ nav {
 			height: 140px;
 			bottom: 80px;
 			left: 0;
+
+			cursor: default;
 
 		}
 
